MainParser.output
Terminales no usados en gramática

   ERROR
   dos_p
   comillas
   instanciar_rsv


Reglas inútiles en el analizador debido a conflictos

    4 $@1: %empty


Estado 12 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: INICIO $end

    1 INICIO: CLASE
    2       | IMPORT_LIST CLASE

    3 CLASE: TIPO_ACCESO clase_rsv id dolar CUERPO_CLASE dolar

    4 $@1: %empty

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id EXTIENDE dolar CUERPO_CLASE dolar

    6 TIPO_ACCESO: paratodos_rsv
    7            | protegido_rsv
    8            | privado_rsv

    9 EXTIENDE: extiende_rsv id

   10 IMPORT_LIST: IMPORT_LIST IMPORT
   11            | IMPORT

   12 IMPORT: traer_rsv string_token

   13 CUERPO_CLASE: CUERPO_CLASE SENTENCIAS_CLASE
   14             | SENTENCIAS_CLASE

   15 SENTENCIAS_CLASE: DECATR p_coma
   16                 | DECMETODO
   17                 | DECARRATR p_coma

   18 DECATR: decattr_rsv TIPO_ACCESO id TIPO
   19       | decattr_rsv TIPO_ACCESO id TIPO sig_igual ASIGNACION

   20 DECARRATR: decarr_rsv TIPO_ACCESO id TIPO DIMLIST
   21          | decarr_rsv TIPO_ACCESO id TIPO DIMLIST sig_igual INICIAR_ARR

   22 DIMLIST: DIMLIST DIM
   23        | DIM

   24 DIM: llave_a numero llave_c

   25 TIPO: entero_rsv
   26     | cadena_rsv
   27     | caracter_rsv
   28     | bool_rsv
   29     | ninguno_rsv
   30     | id

   31 BOOL: true_rsv
   32     | false_rsv

   33 DECMETODO: def_rsv TIPO_ACCESO id TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   34          | def_rsv id TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv TIPO_ACCESO id TIPO par_a par_c dolar INSTRUCCIONES dolar
   36          | def_rsv id TIPO par_a par_c dolar INSTRUCCIONES dolar

   37 PARAMLIST: PARAMLIST coma PARAM
   38          | PARAM

   39 PARAM: id TIPO
   40      | ref_rsv id TIPO

   41 INSTRUCCIONES: INSTRUCCIONES SENTENCIAS
   42              | SENTENCIAS

   43 SENTENCIAS: DECVAR p_coma
   44           | RETORNO p_coma
   45           | IF
   46           | CICLO
   47           | DETENER p_coma
   48           | OPSIMP p_coma
   49           | DECARRVAR p_coma
   50           | ASIG_ARR p_coma
   51           | VAR_ASIG p_coma
   52           | FUNCALL p_coma
   53           | MODIFATRIBUTO p_coma

   54 DECVAR: id TIPO
   55       | id TIPO sig_igual ASIGNACION

   56 RETORNO: retornar_rsv EXPRESION

   57 EXPRESION: EXPRESION orOp EXPRESION
   58          | EXPRESION andOp EXPRESION
   59          | notOp EXPRESION
   60          | EXPRESION esigual EXPRESION
   61          | EXPRESION noigual EXPRESION
   62          | EXPRESION mayor EXPRESION
   63          | EXPRESION menor EXPRESION
   64          | EXPRESION mayorigual EXPRESION
   65          | EXPRESION menorigual EXPRESION
   66          | EXPRESION esnulo EXPRESION
   67          | EXPMAT

   68 EXPMAT: EXPMAT mas EXPMAT
   69       | EXPMAT menos EXPMAT
   70       | EXPMAT por EXPMAT
   71       | EXPMAT divOp EXPMAT
   72       | EXPMAT potencia EXPMAT
   73       | EXP

   74 EXP: par_a EXPRESION par_c
   75    | id
   76    | numero
   77    | OPSIMP
   78    | BOOL
   79    | ARR_ACCESO

   80 IF: si_cumple_rsv par_a EXPRESION par_c dolar INSTRUCCIONES dolar
   81   | si_cumple_rsv par_a EXPRESION par_c dolar INSTRUCCIONES dolar sino_cumple_rsv dolar INSTRUCCIONES dolar
   82   | si_cumple_rsv par_a EXPRESION par_c dolar INSTRUCCIONES dolar ELSEIFLIST sino_cumple_rsv dolar INSTRUCCIONES dolar

   83 ELSEIFLIST: ELSEIFLIST ELSEIF
   84           | ELSEIF

   85 ELSEIF: sino_intente par_a EXPRESION par_c dolar INSTRUCCIONES dolar

   86 DETENER: detener_rsv

   87 CICLO: repetir_mientras_rsv par_a EXPRESION par_c dolar INSTRUCCIONES dolar

   88 OPSIMP: id masmas
   89       | id menosmenos
   90       | id porpor
   91       | id numeralnumeral
   92       | ACCESOATRIBUTO masmas
   93       | ACCESOATRIBUTO menosmenos
   94       | ACCESOATRIBUTO porpor
   95       | ACCESOATRIBUTO numeralnumeral

   96 DECARRVAR: id TIPO DIMLIST
   97          | id TIPO DIMLIST sig_igual INICIAR_ARR

   98 ASIGNACION: VALOR

   99 VALOR: string_token
  100      | caracter_token
  101      | EXPRESION
  102      | ACCESOATRIBUTO
  103      | FUNCALL

  104 INICIAR_ARR: llave_a LISTA_ASIG_ARR llave_c
  105            | llave_a ASIGLIST llave_c

  106 LISTA_ASIG_ARR: LISTA_ASIG_ARR coma INICIAR_ARR
  107               | INICIAR_ARR

  108 ASIGLIST: ASIGLIST coma ASIGNACION
  109         | ASIGNACION

  110 ARR_ACCESO: id DIMLIST

  111 ASIG_ARR: ARR_ACCESO sig_igual ASIGNACION

  112 VAR_ASIG: id sig_igual ASIGNACION

  113 FUNCALL: IMPRIMIR
  114        | ACCESOMETODO
  115        | id par_a par_c
  116        | id par_a PARAMS par_c

  117 IMPRIMIR: imprimir_rsv par_a VALOR par_c

  118 PARAMS: PARAMS coma VALOR
  119       | VALOR

  120 ACCESOATRIBUTO: id punto id
  121               | este_rsv punto id

  122 MODIFATRIBUTO: ACCESOATRIBUTO sig_igual ASIGNACION

  123 ACCESOMETODO: id punto id par_a par_c
  124             | este_rsv punto id par_a par_c
  125             | id punto id par_a PARAMS par_c
  126             | este_rsv punto id par_a PARAMS par_c


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ERROR (258)
par_a (259) 33 34 35 36 74 80 81 82 85 87 115 116 117 123 124 125 126
par_c (260) 33 34 35 36 74 80 81 82 85 87 115 116 117 123 124 125 126
llave_a (261) 24 104 105
llave_c (262) 24 104 105
sig_igual (263) 19 21 55 97 111 112 122
p_coma (264) 15 17 43 44 47 48 49 50 51 52 53
dos_p (265)
punto (266) 120 121 123 124 125 126
comillas (267)
coma (268) 37 106 108 118
id (269) 3 5 9 18 19 20 21 30 33 34 35 36 39 40 54 55 75 88 89 90 91
    96 97 110 112 115 116 120 121 123 124 125 126
numero (270) 24 76
string_token (271) 12 99
caracter_token (272) 100
clase_rsv (273) 3 5
extiende_rsv (274) 9
paratodos_rsv (275) 6
protegido_rsv (276) 7
privado_rsv (277) 8
dolar (278) 3 5 33 34 35 36 80 81 82 85 87
traer_rsv (279) 12
decattr_rsv (280) 18 19
entero_rsv (281) 25
bool_rsv (282) 28
caracter_rsv (283) 27
cadena_rsv (284) 26
def_rsv (285) 33 34 35 36
ninguno_rsv (286) 29
retornar_rsv (287) 56
ref_rsv (288) 40
si_cumple_rsv (289) 80 81 82
sino_intente (290) 85
sino_cumple_rsv (291) 81 82
repetir_mientras_rsv (292) 87
detener_rsv (293) 86
decarr_rsv (294) 20 21
true_rsv (295) 31
false_rsv (296) 32
imprimir_rsv (297) 117
instanciar_rsv (298)
este_rsv (299) 121 124 126
esigual (300) 60
noigual (301) 61
mayor (302) 62
menor (303) 63
mayorigual (304) 64
menorigual (305) 65
esnulo (306) 66
orOp (307) 57
andOp (308) 58
notOp (309) 59
mas (310) 68
menos (311) 69
por (312) 70
divOp (313) 71
potencia (314) 72
numeralnumeral (315) 91 95
masmas (316) 88 92
menosmenos (317) 89 93
porpor (318) 90 94


No terminales con las reglas donde aparecen

$accept (64)
    en la izquierda: 0
INICIO (65)
    en la izquierda: 1 2, en la derecha: 0
CLASE (66)
    en la izquierda: 3 5, en la derecha: 1 2
$@1 (67)
    en la izquierda: 4, en la derecha: 5
TIPO_ACCESO (68)
    en la izquierda: 6 7 8, en la derecha: 3 5 18 19 20 21 33 35
EXTIENDE (69)
    en la izquierda: 9, en la derecha: 5
IMPORT_LIST (70)
    en la izquierda: 10 11, en la derecha: 2 10
IMPORT (71)
    en la izquierda: 12, en la derecha: 10 11
CUERPO_CLASE (72)
    en la izquierda: 13 14, en la derecha: 3 5 13
SENTENCIAS_CLASE (73)
    en la izquierda: 15 16 17, en la derecha: 13 14
DECATR (74)
    en la izquierda: 18 19, en la derecha: 15
DECARRATR (75)
    en la izquierda: 20 21, en la derecha: 17
DIMLIST (76)
    en la izquierda: 22 23, en la derecha: 20 21 22 96 97 110
DIM (77)
    en la izquierda: 24, en la derecha: 22 23
TIPO (78)
    en la izquierda: 25 26 27 28 29 30, en la derecha: 18 19 20 21
    33 34 35 36 39 40 54 55 96 97
BOOL (79)
    en la izquierda: 31 32, en la derecha: 78
DECMETODO (80)
    en la izquierda: 33 34 35 36, en la derecha: 16
PARAMLIST (81)
    en la izquierda: 37 38, en la derecha: 33 34 37
PARAM (82)
    en la izquierda: 39 40, en la derecha: 37 38
INSTRUCCIONES (83)
    en la izquierda: 41 42, en la derecha: 33 34 35 36 41 80 81 82
    85 87
SENTENCIAS (84)
    en la izquierda: 43 44 45 46 47 48 49 50 51 52 53, en la derecha:
    41 42
DECVAR (85)
    en la izquierda: 54 55, en la derecha: 43
RETORNO (86)
    en la izquierda: 56, en la derecha: 44
EXPRESION (87)
    en la izquierda: 57 58 59 60 61 62 63 64 65 66 67, en la derecha:
    56 57 58 59 60 61 62 63 64 65 66 74 80 81 82 85 87 101
EXPMAT (88)
    en la izquierda: 68 69 70 71 72 73, en la derecha: 67 68 69 70
    71 72
EXP (89)
    en la izquierda: 74 75 76 77 78 79, en la derecha: 73
IF (90)
    en la izquierda: 80 81 82, en la derecha: 45
ELSEIFLIST (91)
    en la izquierda: 83 84, en la derecha: 82 83
ELSEIF (92)
    en la izquierda: 85, en la derecha: 83 84
DETENER (93)
    en la izquierda: 86, en la derecha: 47
CICLO (94)
    en la izquierda: 87, en la derecha: 46
OPSIMP (95)
    en la izquierda: 88 89 90 91 92 93 94 95, en la derecha: 48 77
DECARRVAR (96)
    en la izquierda: 96 97, en la derecha: 49
ASIGNACION (97)
    en la izquierda: 98, en la derecha: 19 55 108 109 111 112 122
VALOR (98)
    en la izquierda: 99 100 101 102 103, en la derecha: 98 117 118
    119
INICIAR_ARR (99)
    en la izquierda: 104 105, en la derecha: 21 97 106 107
LISTA_ASIG_ARR (100)
    en la izquierda: 106 107, en la derecha: 104 106
ASIGLIST (101)
    en la izquierda: 108 109, en la derecha: 105 108
ARR_ACCESO (102)
    en la izquierda: 110, en la derecha: 79 111
ASIG_ARR (103)
    en la izquierda: 111, en la derecha: 50
VAR_ASIG (104)
    en la izquierda: 112, en la derecha: 51
FUNCALL (105)
    en la izquierda: 113 114 115 116, en la derecha: 52 103
IMPRIMIR (106)
    en la izquierda: 117, en la derecha: 113
PARAMS (107)
    en la izquierda: 118 119, en la derecha: 116 118 125 126
ACCESOATRIBUTO (108)
    en la izquierda: 120 121, en la derecha: 92 93 94 95 102 122
MODIFATRIBUTO (109)
    en la izquierda: 122, en la derecha: 53
ACCESOMETODO (110)
    en la izquierda: 123 124 125 126, en la derecha: 114


State 0

    0 $accept: . INICIO $end

    paratodos_rsv  desplazar e ir al estado 1
    protegido_rsv  desplazar e ir al estado 2
    privado_rsv    desplazar e ir al estado 3
    traer_rsv      desplazar e ir al estado 4

    INICIO       ir al estado 5
    CLASE        ir al estado 6
    TIPO_ACCESO  ir al estado 7
    IMPORT_LIST  ir al estado 8
    IMPORT       ir al estado 9


State 1

    6 TIPO_ACCESO: paratodos_rsv .

    $default  reduce usando la regla 6 (TIPO_ACCESO)


State 2

    7 TIPO_ACCESO: protegido_rsv .

    $default  reduce usando la regla 7 (TIPO_ACCESO)


State 3

    8 TIPO_ACCESO: privado_rsv .

    $default  reduce usando la regla 8 (TIPO_ACCESO)


State 4

   12 IMPORT: traer_rsv . string_token

    string_token  desplazar e ir al estado 10


State 5

    0 $accept: INICIO . $end

    $end  desplazar e ir al estado 11


State 6

    1 INICIO: CLASE .

    $default  reduce usando la regla 1 (INICIO)


State 7

    3 CLASE: TIPO_ACCESO . clase_rsv id dolar CUERPO_CLASE dolar
    5      | TIPO_ACCESO . clase_rsv $@1 id EXTIENDE dolar CUERPO_CLASE dolar

    clase_rsv  desplazar e ir al estado 12


State 8

    2 INICIO: IMPORT_LIST . CLASE
   10 IMPORT_LIST: IMPORT_LIST . IMPORT

    paratodos_rsv  desplazar e ir al estado 1
    protegido_rsv  desplazar e ir al estado 2
    privado_rsv    desplazar e ir al estado 3
    traer_rsv      desplazar e ir al estado 4

    CLASE        ir al estado 13
    TIPO_ACCESO  ir al estado 7
    IMPORT       ir al estado 14


State 9

   11 IMPORT_LIST: IMPORT .

    $default  reduce usando la regla 11 (IMPORT_LIST)


State 10

   12 IMPORT: traer_rsv string_token .

    $default  reduce usando la regla 12 (IMPORT)


State 11

    0 $accept: INICIO $end .

    $default  aceptar


State 12

    3 CLASE: TIPO_ACCESO clase_rsv . id dolar CUERPO_CLASE dolar
    5      | TIPO_ACCESO clase_rsv . $@1 id EXTIENDE dolar CUERPO_CLASE dolar

    id  desplazar e ir al estado 15

    id  [reduce usando la regla 4 ($@1)]

    $@1  ir al estado 16


State 13

    2 INICIO: IMPORT_LIST CLASE .

    $default  reduce usando la regla 2 (INICIO)


State 14

   10 IMPORT_LIST: IMPORT_LIST IMPORT .

    $default  reduce usando la regla 10 (IMPORT_LIST)


State 15

    3 CLASE: TIPO_ACCESO clase_rsv id . dolar CUERPO_CLASE dolar

    dolar  desplazar e ir al estado 17


State 16

    5 CLASE: TIPO_ACCESO clase_rsv $@1 . id EXTIENDE dolar CUERPO_CLASE dolar

    id  desplazar e ir al estado 18


State 17

    3 CLASE: TIPO_ACCESO clase_rsv id dolar . CUERPO_CLASE dolar

    decattr_rsv  desplazar e ir al estado 19
    def_rsv      desplazar e ir al estado 20
    decarr_rsv   desplazar e ir al estado 21

    CUERPO_CLASE      ir al estado 22
    SENTENCIAS_CLASE  ir al estado 23
    DECATR            ir al estado 24
    DECARRATR         ir al estado 25
    DECMETODO         ir al estado 26


State 18

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id . EXTIENDE dolar CUERPO_CLASE dolar

    extiende_rsv  desplazar e ir al estado 27

    EXTIENDE  ir al estado 28


State 19

   18 DECATR: decattr_rsv . TIPO_ACCESO id TIPO
   19       | decattr_rsv . TIPO_ACCESO id TIPO sig_igual ASIGNACION

    paratodos_rsv  desplazar e ir al estado 1
    protegido_rsv  desplazar e ir al estado 2
    privado_rsv    desplazar e ir al estado 3

    TIPO_ACCESO  ir al estado 29


State 20

   33 DECMETODO: def_rsv . TIPO_ACCESO id TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   34          | def_rsv . id TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv . TIPO_ACCESO id TIPO par_a par_c dolar INSTRUCCIONES dolar
   36          | def_rsv . id TIPO par_a par_c dolar INSTRUCCIONES dolar

    id             desplazar e ir al estado 30
    paratodos_rsv  desplazar e ir al estado 1
    protegido_rsv  desplazar e ir al estado 2
    privado_rsv    desplazar e ir al estado 3

    TIPO_ACCESO  ir al estado 31


State 21

   20 DECARRATR: decarr_rsv . TIPO_ACCESO id TIPO DIMLIST
   21          | decarr_rsv . TIPO_ACCESO id TIPO DIMLIST sig_igual INICIAR_ARR

    paratodos_rsv  desplazar e ir al estado 1
    protegido_rsv  desplazar e ir al estado 2
    privado_rsv    desplazar e ir al estado 3

    TIPO_ACCESO  ir al estado 32


State 22

    3 CLASE: TIPO_ACCESO clase_rsv id dolar CUERPO_CLASE . dolar
   13 CUERPO_CLASE: CUERPO_CLASE . SENTENCIAS_CLASE

    dolar        desplazar e ir al estado 33
    decattr_rsv  desplazar e ir al estado 19
    def_rsv      desplazar e ir al estado 20
    decarr_rsv   desplazar e ir al estado 21

    SENTENCIAS_CLASE  ir al estado 34
    DECATR            ir al estado 24
    DECARRATR         ir al estado 25
    DECMETODO         ir al estado 26


State 23

   14 CUERPO_CLASE: SENTENCIAS_CLASE .

    $default  reduce usando la regla 14 (CUERPO_CLASE)


State 24

   15 SENTENCIAS_CLASE: DECATR . p_coma

    p_coma  desplazar e ir al estado 35


State 25

   17 SENTENCIAS_CLASE: DECARRATR . p_coma

    p_coma  desplazar e ir al estado 36


State 26

   16 SENTENCIAS_CLASE: DECMETODO .

    $default  reduce usando la regla 16 (SENTENCIAS_CLASE)


State 27

    9 EXTIENDE: extiende_rsv . id

    id  desplazar e ir al estado 37


State 28

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id EXTIENDE . dolar CUERPO_CLASE dolar

    dolar  desplazar e ir al estado 38


State 29

   18 DECATR: decattr_rsv TIPO_ACCESO . id TIPO
   19       | decattr_rsv TIPO_ACCESO . id TIPO sig_igual ASIGNACION

    id  desplazar e ir al estado 39


State 30

   34 DECMETODO: def_rsv id . TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   36          | def_rsv id . TIPO par_a par_c dolar INSTRUCCIONES dolar

    id            desplazar e ir al estado 40
    entero_rsv    desplazar e ir al estado 41
    bool_rsv      desplazar e ir al estado 42
    caracter_rsv  desplazar e ir al estado 43
    cadena_rsv    desplazar e ir al estado 44
    ninguno_rsv   desplazar e ir al estado 45

    TIPO  ir al estado 46


State 31

   33 DECMETODO: def_rsv TIPO_ACCESO . id TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv TIPO_ACCESO . id TIPO par_a par_c dolar INSTRUCCIONES dolar

    id  desplazar e ir al estado 47


State 32

   20 DECARRATR: decarr_rsv TIPO_ACCESO . id TIPO DIMLIST
   21          | decarr_rsv TIPO_ACCESO . id TIPO DIMLIST sig_igual INICIAR_ARR

    id  desplazar e ir al estado 48


State 33

    3 CLASE: TIPO_ACCESO clase_rsv id dolar CUERPO_CLASE dolar .

    $default  reduce usando la regla 3 (CLASE)


State 34

   13 CUERPO_CLASE: CUERPO_CLASE SENTENCIAS_CLASE .

    $default  reduce usando la regla 13 (CUERPO_CLASE)


State 35

   15 SENTENCIAS_CLASE: DECATR p_coma .

    $default  reduce usando la regla 15 (SENTENCIAS_CLASE)


State 36

   17 SENTENCIAS_CLASE: DECARRATR p_coma .

    $default  reduce usando la regla 17 (SENTENCIAS_CLASE)


State 37

    9 EXTIENDE: extiende_rsv id .

    $default  reduce usando la regla 9 (EXTIENDE)


State 38

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id EXTIENDE dolar . CUERPO_CLASE dolar

    decattr_rsv  desplazar e ir al estado 19
    def_rsv      desplazar e ir al estado 20
    decarr_rsv   desplazar e ir al estado 21

    CUERPO_CLASE      ir al estado 49
    SENTENCIAS_CLASE  ir al estado 23
    DECATR            ir al estado 24
    DECARRATR         ir al estado 25
    DECMETODO         ir al estado 26


State 39

   18 DECATR: decattr_rsv TIPO_ACCESO id . TIPO
   19       | decattr_rsv TIPO_ACCESO id . TIPO sig_igual ASIGNACION

    id            desplazar e ir al estado 40
    entero_rsv    desplazar e ir al estado 41
    bool_rsv      desplazar e ir al estado 42
    caracter_rsv  desplazar e ir al estado 43
    cadena_rsv    desplazar e ir al estado 44
    ninguno_rsv   desplazar e ir al estado 45

    TIPO  ir al estado 50


State 40

   30 TIPO: id .

    $default  reduce usando la regla 30 (TIPO)


State 41

   25 TIPO: entero_rsv .

    $default  reduce usando la regla 25 (TIPO)


State 42

   28 TIPO: bool_rsv .

    $default  reduce usando la regla 28 (TIPO)


State 43

   27 TIPO: caracter_rsv .

    $default  reduce usando la regla 27 (TIPO)


State 44

   26 TIPO: cadena_rsv .

    $default  reduce usando la regla 26 (TIPO)


State 45

   29 TIPO: ninguno_rsv .

    $default  reduce usando la regla 29 (TIPO)


State 46

   34 DECMETODO: def_rsv id TIPO . par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   36          | def_rsv id TIPO . par_a par_c dolar INSTRUCCIONES dolar

    par_a  desplazar e ir al estado 51


State 47

   33 DECMETODO: def_rsv TIPO_ACCESO id . TIPO par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv TIPO_ACCESO id . TIPO par_a par_c dolar INSTRUCCIONES dolar

    id            desplazar e ir al estado 40
    entero_rsv    desplazar e ir al estado 41
    bool_rsv      desplazar e ir al estado 42
    caracter_rsv  desplazar e ir al estado 43
    cadena_rsv    desplazar e ir al estado 44
    ninguno_rsv   desplazar e ir al estado 45

    TIPO  ir al estado 52


State 48

   20 DECARRATR: decarr_rsv TIPO_ACCESO id . TIPO DIMLIST
   21          | decarr_rsv TIPO_ACCESO id . TIPO DIMLIST sig_igual INICIAR_ARR

    id            desplazar e ir al estado 40
    entero_rsv    desplazar e ir al estado 41
    bool_rsv      desplazar e ir al estado 42
    caracter_rsv  desplazar e ir al estado 43
    cadena_rsv    desplazar e ir al estado 44
    ninguno_rsv   desplazar e ir al estado 45

    TIPO  ir al estado 53


State 49

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id EXTIENDE dolar CUERPO_CLASE . dolar
   13 CUERPO_CLASE: CUERPO_CLASE . SENTENCIAS_CLASE

    dolar        desplazar e ir al estado 54
    decattr_rsv  desplazar e ir al estado 19
    def_rsv      desplazar e ir al estado 20
    decarr_rsv   desplazar e ir al estado 21

    SENTENCIAS_CLASE  ir al estado 34
    DECATR            ir al estado 24
    DECARRATR         ir al estado 25
    DECMETODO         ir al estado 26


State 50

   18 DECATR: decattr_rsv TIPO_ACCESO id TIPO .
   19       | decattr_rsv TIPO_ACCESO id TIPO . sig_igual ASIGNACION

    sig_igual  desplazar e ir al estado 55

    $default  reduce usando la regla 18 (DECATR)


State 51

   34 DECMETODO: def_rsv id TIPO par_a . PARAMLIST par_c dolar INSTRUCCIONES dolar
   36          | def_rsv id TIPO par_a . par_c dolar INSTRUCCIONES dolar

    par_c    desplazar e ir al estado 56
    id       desplazar e ir al estado 57
    ref_rsv  desplazar e ir al estado 58

    PARAMLIST  ir al estado 59
    PARAM      ir al estado 60


State 52

   33 DECMETODO: def_rsv TIPO_ACCESO id TIPO . par_a PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv TIPO_ACCESO id TIPO . par_a par_c dolar INSTRUCCIONES dolar

    par_a  desplazar e ir al estado 61


State 53

   20 DECARRATR: decarr_rsv TIPO_ACCESO id TIPO . DIMLIST
   21          | decarr_rsv TIPO_ACCESO id TIPO . DIMLIST sig_igual INICIAR_ARR

    llave_a  desplazar e ir al estado 62

    DIMLIST  ir al estado 63
    DIM      ir al estado 64


State 54

    5 CLASE: TIPO_ACCESO clase_rsv $@1 id EXTIENDE dolar CUERPO_CLASE dolar .

    $default  reduce usando la regla 5 (CLASE)


State 55

   19 DECATR: decattr_rsv TIPO_ACCESO id TIPO sig_igual . ASIGNACION

    par_a           desplazar e ir al estado 65
    id              desplazar e ir al estado 66
    numero          desplazar e ir al estado 67
    string_token    desplazar e ir al estado 68
    caracter_token  desplazar e ir al estado 69
    true_rsv        desplazar e ir al estado 70
    false_rsv       desplazar e ir al estado 71
    imprimir_rsv    desplazar e ir al estado 72
    este_rsv        desplazar e ir al estado 73
    notOp           desplazar e ir al estado 74

    BOOL            ir al estado 75
    EXPRESION       ir al estado 76
    EXPMAT          ir al estado 77
    EXP             ir al estado 78
    OPSIMP          ir al estado 79
    ASIGNACION      ir al estado 80
    VALOR           ir al estado 81
    ARR_ACCESO      ir al estado 82
    FUNCALL         ir al estado 83
    IMPRIMIR        ir al estado 84
    ACCESOATRIBUTO  ir al estado 85
    ACCESOMETODO    ir al estado 86


State 56

   36 DECMETODO: def_rsv id TIPO par_a par_c . dolar INSTRUCCIONES dolar

    dolar  desplazar e ir al estado 87


State 57

   39 PARAM: id . TIPO

    id            desplazar e ir al estado 40
    entero_rsv    desplazar e ir al estado 41
    bool_rsv      desplazar e ir al estado 42
    caracter_rsv  desplazar e ir al estado 43
    cadena_rsv    desplazar e ir al estado 44
    ninguno_rsv   desplazar e ir al estado 45

    TIPO  ir al estado 88


State 58

   40 PARAM: ref_rsv . id TIPO

    id  desplazar e ir al estado 89


State 59

   34 DECMETODO: def_rsv id TIPO par_a PARAMLIST . par_c dolar INSTRUCCIONES dolar
   37 PARAMLIST: PARAMLIST . coma PARAM

    par_c  desplazar e ir al estado 90
    coma   desplazar e ir al estado 91


State 60

   38 PARAMLIST: PARAM .

    $default  reduce usando la regla 38 (PARAMLIST)


State 61

   33 DECMETODO: def_rsv TIPO_ACCESO id TIPO par_a . PARAMLIST par_c dolar INSTRUCCIONES dolar
   35          | def_rsv TIPO_ACCESO id TIPO par_a . par_c dolar INSTRUCCIONES dolar

    par_c    desplazar e ir al estado 92
    id       desplazar e ir al estado 57
    ref_rsv  desplazar e ir al estado 58

    PARAMLIST  ir al estado 93
    PARAM      ir al estado 60


State 62

   24 DIM: llave_a . numero llave_c

    numero  desplazar e ir al estado 94


State 63

   20 DECARRATR: decarr_rsv TIPO_ACCESO id TIPO DIMLIST .
   21          | decarr_rsv TIPO_ACCESO id TIPO DIMLIST . sig_igual INICIAR_ARR
   22 DIMLIST: DIMLIST . DIM

    llave_a    desplazar e ir al estado 62
    sig_igual  desplazar e ir al estado 95

    $default  reduce usando la regla 20 (DECARRATR)

    DIM  ir al estado 96


State 64

   23 DIMLIST: DIM .

    $default  reduce usando la regla 23 (DIMLIST)


State 65

   74 EXP: par_a . EXPRESION par_c

    par_a      desplazar e ir al estado 65
    id         desplazar e ir al estado 97
    numero     desplazar e ir al estado 67
    true_rsv   desplazar e ir al estado 70
    false_rsv  desplazar e ir al estado 71
    este_rsv   desplazar e ir al estado 98
    notOp      desplazar e ir al estado 74

    BOOL            ir al estado 75
    EXPRESION       ir al estado 99
    EXPMAT          ir al estado 77
    EXP             ir al estado 78
    OPSIMP          ir al estado 79
    ARR_ACCESO      ir al estado 82
    ACCESOATRIBUTO  ir al estado 100


State 66

   75 EXP: id .
   88 OPSIMP: id . masmas
   89       | id . menosmenos
   90       | id . porpor
   91       | id . numeralnumeral
  110 ARR_ACCESO: id . DIMLIST
  115 FUNCALL: id . par_a par_c
  116        | id . par_a PARAMS par_c
  120 ACCESOATRIBUTO: id . punto id
  123 ACCESOMETODO: id . punto id par_a par_c
  125             | id . punto id par_a PARAMS par_c

    par_a           desplazar e ir al estado 101
    llave_a         desplazar e ir al estado 62
    punto           desplazar e ir al estado 102
    numeralnumeral  desplazar e ir al estado 103
    masmas          desplazar e ir al estado 104
    menosmenos      desplazar e ir al estado 105
    porpor          desplazar e ir al estado 106

    $default  reduce usando la regla 75 (EXP)

    DIMLIST  ir al estado 107
    DIM      ir al estado 64


State 67

   76 EXP: numero .

    $default  reduce usando la regla 76 (EXP)


State 68

   99 VALOR: string_token .

    $default  reduce usando la regla 99 (VALOR)


State 69

  100 VALOR: caracter_token .

    $default  reduce usando la regla 100 (VALOR)


State 70

   31 BOOL: true_rsv .

    $default  reduce usando la regla 31 (BOOL)


State 71

   32 BOOL: false_rsv .

    $default  reduce usando la regla 32 (BOOL)


State 72

  117 IMPRIMIR: imprimir_rsv . par_a VALOR par_c

    par_a  desplazar e ir al estado 108


State 73

  121 ACCESOATRIBUTO: este_rsv . punto id
  124 ACCESOMETODO: este_rsv . punto id par_a par_c
  126             | este_rsv . punto id par_a PARAMS par_c

    punto  desplazar e ir al estado 109


State 74

   59 EXPRESION: notOp . EXPRESION

    par_a      desplazar e ir al estado 65
    id         desplazar e ir al estado 97
    numero     desplazar e ir al estado 67
    true_rsv   desplazar e ir al estado 70
    false_rsv  desplazar e ir al estado 71
    este_rsv   desplazar e ir al estado 98
    notOp      desplazar e ir al estado 74

    BOOL            ir al estado 75
    EXPRESION       ir al estado 110
    EXPMAT          ir al estado 77
    EXP             ir al estado 78
    OPSIMP          ir al estado 79
    ARR_ACCESO      ir al estado 82
    ACCESOATRIBUTO  ir al estado 100


State 75

   78 EXP: BOOL .

    $default  reduce usando la regla 78 (EXP)


State 76

   57 EXPRESION: EXPRESION . orOp EXPRESION
   58          | EXPRESION . andOp EXPRESION
   60          | EXPRESION . esigual EXPRESION
   61          | EXPRESION . noigual EXPRESION
   62          | EXPRESION . mayor EXPRESION
   63          | EXPRESION . menor EXPRESION
   64          | EXPRESION . mayorigual EXPRESION
   65          | EXPRESION . menorigual EXPRESION
   66          | EXPRESION . esnulo EXPRESION
  101 VALOR: EXPRESION .

    esigual     desplazar e ir al estado 111
    noigual     desplazar e ir al estado 112
    mayor       desplazar e ir al estado 113
    menor       desplazar e ir al estado 114
    mayorigual  desplazar e ir al estado 115
    menorigual  desplazar e ir al estado 116
    esnulo      desplazar e ir al estado 117
    orOp        desplazar e ir al estado 118
    andOp       desplazar e ir al estado 119

    $default  reduce usando la regla 101 (VALOR)


State 77

   67 EXPRESION: EXPMAT .
   68 EXPMAT: EXPMAT . mas EXPMAT
   69       | EXPMAT . menos EXPMAT
   70       | EXPMAT . por EXPMAT
   71       | EXPMAT . divOp EXPMAT
   72       | EXPMAT . potencia EXPMAT

    mas       desplazar e ir al estado 120
    menos     desplazar e ir al estado 121
    por       desplazar e ir al estado 122
    divOp     desplazar e ir al estado 123
    potencia  desplazar e ir al estado 124

    $default  reduce usando la regla 67 (EXPRESION)


State 78

   73 EXPMAT: EXP .
